<resources>
    <string name="app_name">paradise</string>
    <string name="judul">UKM Paradise</string>
    <string name="stis">Politeknik Statistika STIS</string>
    <string name="welcome_msg">Selamat Datang!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="go_to_login">Sudah Punya Akun? Login</string>
    <string name="go_to_register">Belum Punya Akun? Daftar</string>
    <string name="detail_profile">Detail Profil</string>
    <string name="dashboard">Dashboard</string>
    <string name="form_daftar_anggota">Form Pendaftaran Anggota</string>
    <string name="daftar_anggota">Daftar Anggota</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="ubah_pass">Ubah Password</string>
    <string name="hapus_akun">Hapus Akun</string>
</resources>