<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="76dp"
            android:layout_marginLeft="10pt"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20pt"
            android:layout_marginTop="5pt"
            android:text="@string/detail_profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45pt"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

        <TextView
            android:id="@+id/name_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/email_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="10pt" />
    </LinearLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:onClick="goToHome"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/edit_profil_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:background="@drawable/btn_styling"
        android:text="@string/edit_profil"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toStartOf="@+id/ubah_pass_btn"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ubah_pass_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_styling"
        android:text="@string/ubah_pass"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="513dp" />
</androidx.constraintlayout.widget.ConstraintLayout>