<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="76dp"
            android:layout_marginLeft="10pt"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/title_dsb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20pt"
            android:layout_marginTop="5pt"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/form_daftar_btn"
        android:layout_width="180sp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/btn_styling"
        android:text="@string/form_daftar_anggota"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />

    <Button
        android:id="@+id/daftar_btn"
        android:layout_width="180sp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/btn_styling"
        android:text="@string/daftar_anggota"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/form_daftar_btn"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />

    <Button
        android:id="@+id/profil_btn"
        android:layout_width="180sp"
        android:layout_height="80dp"
        android:background="@drawable/btn_styling"
        android:text="@string/detail_profile"
        android:textSize="15sp"
        android:onClick="goToProfile"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
        app:layout_constraintVertical_bias="0.618" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
        android:text="@string/logout"
        android:textSize="15sp"
        android:onClick="goToHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>